# debastiani-dev-site

./: .env.example  .env.prod.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml  sitemaps.py
.github/: pull_request_template.md
.github/workflows/: deploy.yml
apps/base/models/: __init__.py  base_model.py
apps/pages/: urls.py
apps/pages/templates/pages/: about.html  home.html
apps/pages/views/: home.py
apps/portfolio/: apps.py  urls.py
apps/portfolio/admin/: __init__.py  portfolio.py
apps/portfolio/migrations/: 0001_initial.py
apps/portfolio/models/: __init__.py  projects.py
apps/portfolio/templates/portfolio/: project_detail.html  project_list.html
apps/portfolio/views/: projects.py
apps/users/: apps.py
apps/users/admin/: __init__.py  users.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_id_alter_user_uuid.py
apps/users/models/: __init__.py  users.py
core/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
templates/: 404.html  500.html  base.html  home.html  robots.txt
templates/partials/: footer.html  navbar.html
tests/: conftest.py
tests/apps/base/models/: test_base_model.py
tests/apps/base/utils/: models_list.py
tests/apps/pages/views/: test_about.py  test_home.py
tests/apps/portfolio/models/: test_project_category.py  test_project_models.py  test_project_technology.py
tests/apps/portfolio/views/: test_project.py
tests/apps/users/: test_user_manage.py  test_user_model.py
