[tool.poetry]
name = "debastiani-dev-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.git
  | \.venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
psycopg = {extras = ["binary"], version = "^3.2.13"}
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
pre-commit = "^4.4.0"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
