[tool.poetry]
name = "debastiani-dev-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.git
  | \.venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
psycopg = {extras = ["binary"], version = "^3.2.13"}
python-decouple = "^3.8"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.4.0"}
pillow = "^12.0.0"
gunicorn = "^25.1.0"
whitenoise = "^6.11.0"


[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
pre-commit = "^4.4.0"
pytest = "^9.0.1"
pytest-django = "^4.11.1"
autoflake8 = "^0.4.1"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pylint = "^4.0.4"
model-bakery = "^1.23.2"
django-stubs = "^5.2.9"
pylint-django = "^2.7.0"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["decouple.*", "phonenumber_field.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "core.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [".", "apps"]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "--nomigrations --reuse-db"